2009-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_mouse.js:  Initialize x2 and y2 axes in mousing code.

2009-04-13  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc term/canvas.trm:  Fix typos in the documentation.

2009-04-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (find_maxl_keys3d):  Fix incorrect layout of key box in
	plots with labeled contours (e.g. contours.dem plot #21).

	* src/graph3d.c src/graph3d.h src/set.c src/unset.c docs/gnuplot.doc:
	Add a per-plot attribute "nosurface", allowing an individual plot to 
	opt out of the global 3D setting "set surface".

	* src/datafile.c (plot_option_binary): Do not reset df_matrix_file to
	FALSE just because there is a default setting for the binary format.
	Bugfix

2009-04-05  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.c:
	Add plot canvas to the focus list so that hotkeys work in Firefox.

2009-04-04  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/plot2d.c (eval_plots): Initialize newhistogram line type to
	current plot linetype. Otherwise "set style incr user" fails.
	Bug #2725577

2009-04-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm:  Track current and previous linewidth, so that we 
	can issue an explicit "PL"  (stroke and set linewidth) if it has
	changed.
	Bug #2725599

2009-03-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm term/js/gnuplot_mouse.css term/js/gnuplot_mouse.js
	term/js/gnuplot_common.js term/js/textzoom.png:

	Revise canvas terminal to provide additional client-side interactions.
	- Left mouse-click annotates the graph
	- Client side click-and-drag zooming of plots
	- Hotkey support (doesn't work in Firefox for some reason)
	- Coordinate space is oversampled to retain precision when zoomed
	The size of output *.js files is reduced by roughly 25% by using a set
	of shared routines kept in a separate file gnuplot_common.js
